Wed Feb 18 19:06:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Client_Logging_Handler.cpp:
        * netsvcs/lib/Client_Logging_Handler.h:
          Just use ACE_HAS_STREAM_PIPES, there are too much other
          dependencies on this define

Wed Feb 18 15:34:33 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/tests.mpc:
          Reverted the last changes made by Johnny
          (ace/svc_export.h is back again).

Wed Feb 18 12:58:33 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Added ACE_LACKS_ISCTYPE.

Wed Feb 18 10:25:49 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-g++-common.h:
          Define ACE_LACKS_NUMERIC_LIMITS and ACE_LACKS_ISCTYPE if
          compiling with GCC 2.x.

        * ace/config-lynxos.h:
        * ace/config-vxworks5.x.h:
          Do not define ACE_LACKS_NUMERIC_LIMITS. It is now handled by
          config-g++-common.h.

Wed Feb 18 09:22:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/DLL_Test.h:
          Revert changes made by Johnny (just use
          ace/svc_export.h again).

        * tests/DLL_Test_Export.h:
          Removed since ace/svc_export.h is
          used again.

Tue Feb 17 23:56:45 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:

          Disabled xerces by default as well.

Tue Feb 17 20:19:06 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_stddef.h:
          Removed unneeded definitions for NULL and offsetof.

Tue Feb 17 18:08:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Client_Logging_Handler.h:
        * netsvcs/lib/Name_Handler.cpp:
        * netsvcs/lib/Name_Handler.h:
        * netsvcs/lib/Server_Logging_Handler.h:
        * netsvcs/lib/Server_Logging_Handler_T.cpp:
        * netsvcs/lib/Time_Request_Reply.cpp:
        * netsvcs/lib/Time_Request_Reply.h:
        * netsvcs/lib/Token_Handler.cpp: